--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.5",
+    "@react-navigation/bottom-tabs": "^6.0.7",
     "@react-navigation/drawer": "^6.1.4",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
     "expo": "~42.0.1",
+    "expo-blur": "^9.0.3",
     "expo-image-picker": "^10.2.3",
     "expo-linear-gradient": "^9.2.0",
     "expo-notifications": "^0.12.3",
