--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-linear-gradient": "^9.2.0",
     "expo-notifications": "^0.12.3",
     "expo-secure-store": "^10.2.0",
+    "expo-speech": "~9.2.0",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
     "react": "16.13.1",
